@@ -1,5 +1,11 @@
 2007-08-01  Alex Graveley  <alex@beatniksoftware.com>
 
+	* compzilla/src/compzillaControl.cpp (PrintEvent): Fix crash
+	caused by printing a pointer as %s, use 0x%0x instead of %p while
+	we're here.
+
+2007-08-01  Alex Graveley  <alex@beatniksoftware.com>
+
 	* compzilla/src/compzillaControl.cpp (GetNativeWidget): Don't use
 	nsIScriptGlobalObject/nsPIDOMWindow to get the docshell, use the
 	nsIWebNavigation instead.
